feat: add shared library exports and enhance image generator
- Add SHARED_LIBRARY.md documentation
- Export core functions from lib/index.ts
- Enhance imageGenerator with new capabilities
- Update types and tsconfig for library build

--- a/mcp-server/tsconfig.json
+++ b/mcp-server/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowJs": true,
@@ -10,8 +10,12 @@
     "rootDir": "./src",
     "strict": true,
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
