--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,9 +1,30 @@
 {
   "name": "nanobanana-mcp-server",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "type": "module",
-  "description": "MCP server for Nano Banana extension",
-  "main": "dist/index.js",
+  "description": "MCP server for Nano Banana extension - Image Generation & Enhancement Library",
+  "main": "dist/lib/index.js",
+  "types": "dist/lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/lib/index.d.ts",
+      "import": "./dist/lib/index.js",
+      "default": "./dist/lib/index.js"
+    },
+    "./mcp": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts",
+      "import": "./dist/types.js",
+      "default": "./dist/types.js"
+    }
+  },
+  "bin": {
+    "nanobanana-mcp": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -22,5 +43,20 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "peerDependencies": {
+    "@google/genai": ">=1.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@google/genai": {
+      "optional": true
+    }
+  },
+  "keywords": [
+    "mcp",
+    "image-generation",
+    "gemini",
+    "ai",
+    "enhancement"
+  ]
 }
